[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/ui/MySlider.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/OptionSwitcher.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-103.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/blue_title_panel.tres" type="StyleBox" id=5]
[ext_resource path="res://src/ui/SettingsScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-17.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-107_0.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/tank-battle.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-25.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-98.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-101.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-102.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-100.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-97.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-99.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-104.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tank-uiedit-87.png" type="Texture" id=18]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 742, 55 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 742, 55 )

[node name="SettingsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true,
"_edit_vertical_guides_": [ 1311.0, 803.0 ]
}

[node name="BgSetting" type="TextureRect" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 1924.0
margin_bottom = 1084.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 309.0
margin_top = 209.0
margin_right = 522.0
margin_bottom = 132.0
rect_scale = Vector2( 0.623985, 0.753067 )
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 65.0
margin_top = 40.0
margin_right = 2078.0
margin_bottom = 953.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="Panel/VBoxContainer"]
margin_right = 2013.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 170 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tank" type="TextureRect" parent="Panel/VBoxContainer/Sprite"]
margin_left = 303.598
margin_top = -182.086
margin_right = 1264.6
margin_bottom = 167.914
rect_scale = Vector2( 1.47406, 1.1014 )
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureRect" parent="Panel/VBoxContainer/Sprite"]
margin_left = 523.155
margin_top = -298.941
margin_right = 1484.15
margin_bottom = 51.0591
rect_scale = Vector2( 1.00902, 1.50586 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
margin_left = 395.0
margin_top = 174.0
margin_right = 1617.0
margin_bottom = 685.0
size_flags_horizontal = 4
custom_constants/vseparation = 50
custom_constants/hseparation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgMusicSlider" type="TextureRect" parent="Panel/VBoxContainer/GridContainer"]
margin_right = 1222.0
margin_bottom = 137.0
texture = ExtResource( 4 )
stretch_mode = 5

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer/GridContainer/BgMusicSlider"]
margin_left = 330.0
margin_top = -8.0
margin_right = 1171.0
margin_bottom = 192.0
rect_min_size = Vector2( 500, 200 )
rect_scale = Vector2( 0.99473, 0.802116 )
size_flags_vertical = 12
custom_icons/grabber_disabled = ExtResource( 16 )
custom_icons/grabber_highlight = ExtResource( 16 )
custom_icons/grabber = ExtResource( 15 )
custom_styles/slider = SubResource( 1 )
max_value = 1.25
step = 0.05
value = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgSoundSlider" type="TextureRect" parent="Panel/VBoxContainer/GridContainer"]
margin_top = 187.0
margin_right = 1222.0
margin_bottom = 324.0
texture = ExtResource( 13 )

[node name="SoundSlider" type="HSlider" parent="Panel/VBoxContainer/GridContainer/BgSoundSlider"]
margin_left = 330.0
margin_top = -7.0
margin_right = 1174.0
margin_bottom = 193.0
rect_min_size = Vector2( 500, 200 )
rect_scale = Vector2( 0.995, 0.802 )
size_flags_vertical = 12
custom_icons/grabber_disabled = ExtResource( 14 )
custom_icons/grabber_highlight = ExtResource( 14 )
custom_icons/grabber = ExtResource( 11 )
custom_styles/slider = SubResource( 2 )
max_value = 1.25
step = 0.05
value = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgScreenshakeOptions" type="TextureRect" parent="Panel/VBoxContainer/GridContainer"]
margin_top = 374.0
margin_right = 1222.0
margin_bottom = 511.0
texture = ExtResource( 17 )

[node name="ScreenshakeOptions" parent="Panel/VBoxContainer/GridContainer/BgScreenshakeOptions" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 469.509
margin_top = 25.491
margin_right = 1312.51
margin_bottom = 91.491
rect_scale = Vector2( 1, 1.06729 )

[node name="Sprite2" type="TextureRect" parent="Panel/VBoxContainer"]
margin_top = 689.0
margin_right = 2013.0
margin_bottom = 889.0
rect_min_size = Vector2( 0, 200 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="DoneButton" type="Button" parent="Panel/VBoxContainer/Sprite2"]
anchor_left = 0.330353
anchor_top = 0.064
anchor_right = 0.736711
anchor_bottom = 1.0472
margin_right = 153.0
margin_bottom = 46.2
rect_scale = Vector2( 0.7, 0.7 )
size_flags_horizontal = 4
theme = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 9 )
text = "ตกลง"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="value_changed" from="Panel/VBoxContainer/GridContainer/BgMusicSlider/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/GridContainer/BgSoundSlider/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="item_selected" from="Panel/VBoxContainer/GridContainer/BgScreenshakeOptions/ScreenshakeOptions" to="." method="_on_ScreenshakeOptions_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/Sprite2/DoneButton" to="." method="_on_DoneButton_pressed"]
